log/build_2022-11-22_17-01-29/robo_builder_py/stderr.log
  File "/home/ubuntu/workspace/Velizar/robotics_v1/install/robo_builder_py/lib/python3.8/site-packages/robo_builder_py/robo_builder_gui.py", line 143
    for i in range(4):
    ^
SyntaxError: invalid syntax

